# kindergarten

./: .gitignore  0001-building-enable-ia32-platform-building.patch  README.md  SConstruct
compiler/gcc_early/rewirte_gcc/: Makefile  combine.c  cse.c  genconfig.c  genrecog.c  global-alloc.c  jump.c  local-alloc.c  loop.c  recog.c  stor-layout.c  varasm.c
compiler/kotlin_native_early/: gradle.properties  settings.gradle.kts
compiler/kotlin_native_early/app/src/main/kotlin/org/example/: App.kt  KotlinScriptParser.kt  LLVMVariable.kt
compiler/kotlin_native_early/translator_skeletons/: sum.kt
compiler/kotlin_native_early/translator_skeletons/app/: build.gradle.kts
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/: DefaultArguments.kt  main.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/backend.native/cli.bc/: K2Native.kt  K2NativeCompilerPerformanceManager.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/example/: App.kt  Debug.kt  KotlinScriptParser.kt  LLVMBuilder.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/kotlib/Arrays/: ByteArray.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/translator/: App.kt  BlockCodegen.kt  ClassCodeGen.kt  Debug.kt  FileTranslator.kt  FunctionCodegen.kt  KotlinScriptParser.kt  LLVMBuilder.kt  LLVMVariable.kt  ObjectCodegen.kt  ProjectTranslator.kt  PropertyCodegen.kt  StructCodegen.kt  TranslationState.kt  VariableManager.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/translator/codegens/: BlockCodegen.kt  ClassCodegen.kt  FunctionCodegen.kt  ObjectCodegen.kt  PropertyCodegen.kt  StructCodegen.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/translator/debug/: Debug.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/translator/exceptions/: UnimplementedException.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/translator/llvm/: Generators.kt  LLVMBuilder.kt  LLVMCall.kt  LLVMClassVariable.kt  LLVMConstant.kt  LLVMConstructorCall.kt  LLVMExpression.kt  LLVMLabel.kt  LLVMScope.kt  LLVMSingleValue.kt  LLVMVariable.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/translator/llvm/types/: LLVMArray.kt  LLVMBooleanType.kt  LLVMByteType.kt  LLVMCharType.kt  LLVMDoubleType.kt  LLVMEnumItemType.kt  LLVMFloatType.kt  LLVMFunctionType.kt  LLVMIntType.kt  LLVMLongType.kt  LLVMNullType.kt  LLVMReferenceType.kt  LLVMShortType.kt  LLVMStringType.kt  LLVMType.kt  LLVMTypes.kt  LLVMVoidType.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/kotlin/org/kotlinnative/translator/utils/: Types.kt
compiler/kotlin_native_early/translator_skeletons/app/src/main/resources/kotlib/kotlin/: BooleanArray.kt  ByteArray.kt  IntArray.kt  Primitives.kt  ShortArray.kt
compiler/kotlin_native_early/translator_skeletons/app/src/test/kotlin/org/kotlinnative/translator/: AppTest.kt
compiler/mlir/toy/: ops.td  run.sh  toy_dialect.td
compiler/mlir/toy_ch1/: .llvm-config  AST.cpp  CMakeLists.txt  Dialect.cpp  EXAMPLES.md  GETTING_STARTED.md  LOCAL_LLVM_GUIDE.md  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  Makefile  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  START_HERE.md  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td  build.sh  inline.toy  main.cpp  quick-build.sh  run.sh  setup-llvm.sh  test_simple.toy  verify-config.sh
compiler/mlir/toy_ch1/include/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
compiler/tvm/: CHANGELOG.md  README.md  python_test.sh
compiler/tvm/python/tvm/: __init__.py  expr.py  expr_util.py  op.py  tensor.py  var.py
compiler/tvm/tests/python/: test_basic.py  test_bind.py  test_domain_dom_infer.py  test_domain_range_infer.py  test_expr.py  test_format_str.py  test_tensor.py  test_tensor_inputs.py  test_tensor_reduce.py  test_tensor_shape.py  test_var.py
rewirte_gcc/: Makefile  aux-output.c  cccp.c  cexp.y  decl.c  emit-rtl.c  final.c  fold-const.c  gcc.c  gencodes.c  genemit.c  genextract.c  genoutput.c  parse.y  print-tree.c  reload.c  rtl.c  rtl.h  stmt.c  stupid.c  test.c  tm.h  toplev.c  tree.h  typecheck.c
src/: SConscript  api.cc  shell.cc
vm/light_runtime/: CMakeLists.txt
vm/light_runtime/include/: allocator.h  collector.h  memorymanager.h  sizes.h  stackunwinder.h
vm/light_runtime/src/: allocator.cpp  collector.cpp  memorymanager.cpp  stackunwinder-asm.S  stackunwinder.cpp  yieldpoint-asm.S
vm/v8-early/: .gitignore  LICENSE  SConstruct
vm/v8-early/src/: zone.cc
